FreeST/test/Programs/InvalidTests/Linearity/FunLinearity/FunLinearity.fst
f : Int -> Int
f x = 2 * x

g : (Int 1-> Int) -> Int
g f = f (f 5)

main : Int
main = g 
